# moc_dev

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: Android.mk  Application.mk  simple_ffmpeg_helloword.c
app/src/main/res/drawable/: hani_bg_delete_sticker.xml  (+3 more)
aptdmeo/: build.gradle
aptdmeo/src/main/: AndroidManifest.xml
cvtutorial/: CMakeLists.txt  build.gradle
cvtutorial/src/main/: AndroidManifest.xml
cvtutorial/src/main/cpp/: native-lib.cpp
dagger2demo/: build.gradle
dagger2demo/src/main/: AndroidManifest.xml
dev_apt_lib/: build.gradle
dev_apt_lib/src/main/: AndroidManifest.xml
dev_apt_processor/: build.gradle
dev_compiler/: build.gradle
gl/: build.gradle
gl/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hockey/: build.gradle  proguard-rules.pro
hockey/src/main/: AndroidManifest.xml
mp3encoder/: build.gradle
mp3encoder/src/main/: AndroidManifest.xml
mp3encoder/src/main/jni/: mp3encoder.cpp  mp3encoder.h
openCVLibrary343/: build.gradle
openCVLibrary343/src/main/: AndroidManifest.xml
vktutorial/: CMakeLists.txt  build.gradle
vktutorial/src/androidTest/java/com/master/vktutorial/: ExampleInstrumentedTest.java
vktutorial/src/main/: AndroidManifest.xml
vktutorial/src/main/cpp/: vktutost.cpp
vktutorial/src/main/java/com/master/vktutorial/: MainActivity.java
vktutorial/src/main/res/values/: strings.xml
vktutorial/src/test/java/com/master/vktutorial/: ExampleUnitTest.java
(+237 files in other folders)
